# rjieba-py

./: .gitignore  .readthedocs.yml  Cargo.toml  Dockerfile  LICENSE  README.md  netlify.toml  pyproject.toml
.github/workflows/: CI.yml  master.yml  release.yml
docs/: conf.py  index.rst
rjieba/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_rjieba.py
